remove depricated method signatures in jdbc